syntax = "proto3";
package storage;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message Node {
  enum Type {
    option (gogoproto.goproto_enum_prefix) = false;

    GROUP_EXPRESSION = 0 [(gogoproto.enumvalue_customname) = "NodeTypeGroupExpression"];
    BOOLEAN_EXPRESSION = 1 [(gogoproto.enumvalue_customname) = "NodeTypeBooleanExpression"];
    REF = 2 [(gogoproto.enumvalue_customname) = "NodeTypeRef"];
    LITERAL = 3 [(gogoproto.enumvalue_customname) = "NodeTypeLiteral"];
  }

  enum Comparison {
    option (gogoproto.goproto_enum_prefix) = false;
    EQUAL = 0 [(gogoproto.enumvalue_customname) = "ComparisonEqual"];
    NOT_EQUAL = 1 [(gogoproto.enumvalue_customname) = "ComparisonNotEqual"];
    STARTS_WITH = 2 [(gogoproto.enumvalue_customname) = "ComparisonStartsWith"];
    REGEX = 3 [(gogoproto.enumvalue_customname) = "ComparisonRegex"];
    NOT_REGEX = 4 [(gogoproto.enumvalue_customname) = "ComparisonNotRegex"];
  }

  // Logical operators apply to boolean values and combine to produce a single boolean result.
  enum Logical {
    option (gogoproto.goproto_enum_prefix) = false;

    AND = 0 [(gogoproto.enumvalue_customname) = "LogicalAnd"];
    OR = 1 [(gogoproto.enumvalue_customname) = "LogicalOr"];
  }


  Type node_type = 1 [(gogoproto.customname) = "NodeType", (gogoproto.jsontag) = "nodeType"];
  repeated Node children = 2;

  oneof value {
    string string_value = 3 [(gogoproto.customname) = "StringValue"];
    bool bool_value = 4 [(gogoproto.customname) = "BooleanValue"];
    int64 int_value = 5 [(gogoproto.customname) = "IntegerValue"];
    uint64 uint_value = 6 [(gogoproto.customname) = "UnsignedValue"];
    double float_value = 7 [(gogoproto.customname) = "FloatValue"];
    string regex_value = 8 [(gogoproto.customname) = "RegexValue"];
    string ref_value = 9 [(gogoproto.customname) = "RefValue"];
    Logical logical = 10;
    Comparison comparison = 11;
  }
}

message Predicate {
  Node root = 1;
}